fixing list-item height and client id alignment for client id in settings.

--- a/res/generators/templates/application/public/css/windows_mobile.css
+++ b/res/generators/templates/application/public/css/windows_mobile.css
@@ -40,8 +40,8 @@ div#toolbar div#rightItem {
 
 /* content */
 div#content {
-    width: 100%;
-    height: 100%;
+	width: 100%;
+	height: 100%;
 	padding:0;
 	margin:0;
 }
@@ -61,15 +61,15 @@ div#content ul li {
     margin:0;
 		padding:0;
     overflow: hidden;
+		clear:both;
 }
 
 div#content ul li span.title {
   	margin: 10px 5px 10px 5px;
 		font-size: 12px;
 		font-weight: bold;
-		line-height:20px;
+		line-height:30px;
     display:block;
-		/* FIXME: why is line height 20 when list item = 30px? */
 }
 
 div#content ul li a {
@@ -106,6 +106,21 @@ div#content ul li div.itemValue {
 
 /* Settings */
 
+div#content ul#settings li {
+	height:50px;
+}
+div#content ul#settings li div {
+  line-height:50px;
+	margin:0;
+}
+
+div#content ul#settings li span.clientID {
+    font-size:60%;    
+    float:right;
+    width:45%;
+		display:block;
+		height:20px;
+}
 div#content ul#settings li.alertMessage{
     text-align: center;
 }
@@ -114,14 +129,7 @@ div#content ul#settings li.alertMessage span.message{
     line-height: 30px;
 }
 
-div#content ul#settings li span.clientID {
-    font-size:60%;    
-    float:right;
-    line-height:20px;
-    width:45%;
-		display:block;
-		height:20px;
-}
+
 
 /* reset */
 div#content div#reset  {
